...

    },
    "Display Name" : {
      "comment" : "The label for the display name field in a service setup sheet.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {

    },
    "Download" : {

    },
    "Download Client" : {
...
    "Duration" : {

    },
    "Each server translates paths for itself, so a default and a 4K server sharing a download client still need a mapping each." : {

    },
    "Edit" : {

    },
    "Edit %@" : {

    },
    "Edit as Text" : {
...
    "Removable" : {

    },
    "Removal Reasons" : {

    },
    "Remove" : {

    },
    "Remove '%@' from %@?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Transfer" : {

    },
    "Transfer Stats" : {

    },
    "Trawl" : {

    },
    "Trawl can prefill connection details for qBittorrent and SABnzbd. Other client types can still be added, but you'll need to enter their host and credentials yourself." : {

    },
    "Trawl can't tell what this link is, so choose the client that should fetch it." : {
...
